--- a/test/test_2/test.config
+++ b/test/test_2/test.config
@@ -34,5 +34,5 @@
 -v 
 # --retain-temp
 # set automatically by higher general test config
--e TEMP_DIR
+-e QuartetSamplingTest2
 # -X RAXML_EXECUTABLE
