--- a/test/test_2/test.config
+++ b/test/test_2/test.config
@@ -1,38 +1,40 @@
 # variables will be loaded and used by the run_test.py script
 
-# required
+# ###################
+# REQUIRED PARAMETERS
+# ###################
 
 # TREE
--t = test.tre 
+--tree test.tre 
 
 # ALIGNMENT
--a = test.phy
+--alignment test.phy
 
 # NUMBER_OF_THREADS
--T = 4
+--threads 4
 
 # NUMBER_OF_REPS
--N = 100
+--reps 100
 
-# optional
+# ###################
+# OPTIONAL PARAMETERS 
+# ###################
 
 # (require overlap)
--O = 10
+--min-overlap 10
 
 # THRESHOLD
--L = 0
+--lnlike 0
 
-# -q PARTITIONS
-# -o RESULTS_DIR
-# -r RESULT_PREFIX
-# -s START_NODE_NUMBER
-# -p STOP_NODE_NUMBER
-# -B BAD_BRANCHES
-# -C CLADE
-
-# -v (verbose)
--v 
-# --retain-temp
-# set automatically by higher general test config
--e QuartetSamplingTest2
-# -X RAXML_EXECUTABLE
+# --partitions PARTITIONS
+# --results-dir RESULTS_DIR
+# --results-prefix RESULT_PREFIX
+# --start-node-number START_NODE_NUMBER
+# --stop-node-number STOP_NODE_NUMBER
+# --clade CLADE
+--verbose 
+--retain-temp
+--temp-dir QuartetSamplingTest2
+# --engine-exec raxmlHPC
+# --engine raxml
+--engine-model JC
