--- a/test/test_bigger_balanced/test.config
+++ b/test/test_bigger_balanced/test.config
@@ -3,24 +3,24 @@
 # required
 
 # TREE
--t = test.tre 
+--tree test.tre 
 
 # ALIGNMENT
--a = test.phy
+--align test.phy
 
 # NUMBER_OF_THREADS
--T = 4
+--threads 4
 
 # NUMBER_OF_REPS
--N = 10
+--reps 10
 
 # optional
 
 # (require overlap)
--O = 20
+--min-overlap 20
 
 # THRESHOLD
--L = 2
+--lnlike 2
 
 # -q PARTITIONS
 # -o RESULTS_DIR
