--- a/test/test_paup/test.config
+++ b/test/test_paup/test.config
@@ -3,38 +3,28 @@
 # required
 
 # TREE
--t = test.tre 
+--tree test.tre 
 
 # ALIGNMENT
--a = test.phy
+--align test.phy
 
 # NUMBER_OF_THREADS
--T = 4
+--threads 1
 
 # NUMBER_OF_REPS
--N = 100
+--reps 100
 
 # optional
 
 # (require overlap)
--O = 10
+--min-overlap 10
 
 # THRESHOLD
--L = 0
+--lnlike 0
 
-# -q PARTITIONS
-# -o RESULTS_DIR
-# -r RESULT_PREFIX
-# -s START_NODE_NUMBER
-# -p STOP_NODE_NUMBER
-# -B BAD_BRANCHES
-# -C CLADE
+--verbose
 
-# -v (verbose)
--v 
-# --retain-temp
-# set automatically by higher general test config
-# -e TEMP_DIR
-# -X RAXML_EXECUTABLE
---paup
+# SPECIFY PAUP AS LIKELIHOOD ENGINE
+--engine paup
+
 
