--- a/test/test_simple/test.config
+++ b/test/test_simple/test.config
@@ -3,35 +3,24 @@
 # required
 
 # TREE
--t = test.tre 
+--tree test.tre 
 
 # ALIGNMENT
--a = test.phy
+--align test.phy
 
 # NUMBER_OF_THREADS
--T = 4
+--threads 4
 
 # NUMBER_OF_REPS
--N = 100
+--reps 100
 
 # optional
 
 # (require overlap)
--O = 10
+--min-overlap = 10
 
 # THRESHOLD
--L = 2
+--lnlike 2
 
-# -q PARTITIONS
-# -o RESULTS_DIR
-# -r RESULT_PREFIX
-# -s START_NODE_NUMBER
-# -p STOP_NODE_NUMBER
-# -B BAD_BRANCHES
-# -C CLADE
-
-# -v (verbose)
-
-# set automatically by higher general test config
-# -e TEMP_DIR
-# -X RAXML_EXECUTABLE
+--engine raxml
+--engine-exec raxmlHPC
