--- a/test/test_simple_iqtree/test.config
+++ b/test/test_simple_iqtree/test.config
@@ -1,24 +1,27 @@
 # variables will be loaded and used by the run_test.py script
 
-# ----- required -----
+# required
 
 # TREE
---tree cyp.tre 
+--tree test.tre 
 
 # ALIGNMENT
---align cyp.phy
+--align test.phy
 
 # NUMBER_OF_THREADS
---threads 8
+--threads 4
 
 # NUMBER_OF_REPS
---reps 200
+--reps 100
 
-# ----- optional -----
+# optional
 
 # (require overlap)
---min-overlap 100
+--min-overlap = 10
 
 # THRESHOLD
 --lnlike 2
 
+--engine iqtree
+--engine-exec iqtree
+--verbose
